# toollife-and-energy-optimization

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  cli.py  config.example.json  example_usage.py  optimize_sys_app.py  predict.py  pyproject.toml  requirements.txt  setup.py  train.py
src/: __init__.py
src/config/: __init__.py  config.py
src/data/: __init__.py  data_loader.py  preprocessor.py
src/gui/: __init__.py
src/inference/: __init__.py  optimizer.py  predictor.py
src/models/: __init__.py  model_builder.py  trainer.py
src/utils/: __init__.py  system_config.py
